fixed CSS bug where text box overlapped arg response div

--- a/static/tcdstyle.css
+++ b/static/tcdstyle.css
@@ -306,12 +306,13 @@ margin-bottom: 10px;
 div#arg_actions {
 margin-top: 50px;
 border: thin solid #333333;
-width: 60%;
+width: 410px;
 background: #EEEEEE;
 }
 
 div.arg_responses {
 margin: 20px 20px 20px 20px;
+
 }    
 
 div.arg_query ul.flat-list {
